tests/ui/tokio_sleep.stderr
error: nondeterministic workflow API detected; use durust::sleep instead
 --> tests/ui/tokio_sleep.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
